...
    );
  }

  /// The view displayed in the 'Time' tab of the [_goalsTabbedContainer].
  InkWell _exerciseTimeView() {
    return HPGraphic.createView(
        key: Key("Home.exerciseView"),
        isGoalSet: (Goal.isExerciseTimeGoalSet),
        isHealthAppSynced: true,
        scrollController: _exerciseTimeViewSC,
        onLongPress: () {
          SetGoalsWidget.launch(context);
        },
...
                : Goal.userProgressExerciseTime / Goal.userExerciseTimeEndGoal);
  }

  /// The view displayed in the 'Calories' tab of the [_goalsTabbedContainer].
  InkWell _calsView() {
    return HPGraphic.createView(
        key: Key("Home.calView"),
        isGoalSet: (Goal.isCalGoalSet),
        isHealthAppSynced: Goal.isHealthAppSynced,
        scrollController: _calViewSC,
        onLongPress: () {
          if (Goal.isHealthAppSynced) {
            SetGoalsWidget.launch(context);
...
            : Goal.userProgressCalGoal / Goal.userCalEndGoal);
  }

  /// The view displayed in the 'Steps' tab of the [_goalsTabbedContainer].
  InkWell _stepsView() {
    return HPGraphic.createView(
        key: Key("Home.stepsView"),
        isGoalSet: (Goal.isStepGoalSet),
        isHealthAppSynced: Goal.isHealthAppSynced,
        scrollController: _stepsViewSC,
        onLongPress: () {
          if (Goal.isHealthAppSynced) {
            SetGoalsWidget.launch(context);
...
            : Goal.userProgressStepGoal / Goal.userStepEndGoal);
  }

  /// The view displayed in the 'Miles' tab of the [_goalsTabbedContainer].
  InkWell _milesView() {
    return HPGraphic.createView(
        key: Key("Home.mileView"),
        isGoalSet: (Goal.isMileGoalSet),
        isHealthAppSynced: Goal.isHealthAppSynced,
        scrollController: _milesViewSC,
        onLongPress: () {
          if (Goal.isHealthAppSynced) {
            SetGoalsWidget.launch(context);
...
            color: Colors.black,
            width: 2,
          ),
        ),
        child: HPGraphic.tabbedContainer(context: context, tabs: [
          InkWell(key: Key("Home.timeTab"), child: Text('Time')),
          InkWell(key: Key("Home.calsTab"), child: Text('Calories')),
          InkWell(key: Key("Home.stepsTab"), child: Text('Steps')),
          InkWell(key: Key("Home.milesTab"), child: Text('Miles')),
        ], views: [
          _exerciseTimeView(),
          _calsView(),
          _stepsView(),
          _milesView(),
        ]),
...
