...
    );
  }

  /// Validates all user input and creates an Activity Card to be displayed.
  FFButtonWidget _submitButton() {
    return FFButtonWidget(
      key: Key("AddActivity.submitButton"),
      onPressed: () async {
        setState(() => _loadingButton = true);
        try {
          if (_formKey.currentState!.validate()) {
            String name = activityNameTextController!.text
                .toString()
...
    return Padding(
      padding: EdgeInsetsDirectional.fromSTEB(15, 0, 15, 0),
      child: Container(
        width: MediaQuery.of(context).size.width,
        child: TextFormField(
          enabled: _noRadioButtonSelected(),
          key: Key("AddActivity.activityNameTextField"),
          validator: (value) {
            if (_noRadioButtonSelected()) {
              if (value == null || value.isEmpty) {
                return "Please provide a value";
              }
              if (value.length > 15) {
...
  Padding _durationTextField() {
    return Padding(
      padding: EdgeInsetsDirectional.fromSTEB(15, 0, 15, 0),
      child: Container(
        width: MediaQuery.of(context).size.width / 3,
        child: TextFormField(
          key: Key("AddActivity.durationTextField"),
          validator: (value) {
            if (value == null || value.isEmpty) {
              return "Please provide a value";
            }
            if (!Validator.isPositiveInt(value)) {
              return 'Whole numbers (1+) only';
...
