...
          BottomNavigationBarItem(
            icon: FaIcon(
              FontAwesomeIcons.heartPulse,
              size: 40,
            ),
            label: 'Activity',
            tooltip: "Today's Activity",
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.settings, size: 40),
            label: 'Settings',
            tooltip: 'Settings',
          )
        ],
        backgroundColor: Color(0xFF121212),
        currentIndex: _currentPage,
        selectedItemColor: Colors.lightBlue,
...
